advanced_booking/movies/static/movies/main.css
/*Row and Column styles */

.col-lg-12{ /*large box*/
    border-radius: 5px;
    border: 5px solid #1E2D82;
    padding: 50px;
    margin: 20px;
    background-color: #1E2D82;
    box-shadow: 0px 0px 10px 0px black;
  }
  .col-lg-6{ /*large box*/
    padding: 10px;
    margin: 0px;
    
  }
  
  /*images*/
  img{
    border-radius: 5px;
    height: 100%;
    box-shadow: 0px 0px 10px 5px black;
    background-color: #1E2D82;
    /* margin: 20px; */
  }
  
  /* background */
  body {
    background-color: #03071E;
    
  }
  
  /* text */
  * {
    font-family: 'Raleway', sans-serif;
    color:#DBE9EE;
    
  }
  
  h1 {
    
    color: #FFFBFE;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
  }
  h5{
    color: #FFFBFE;
    font-family: 'Raleway', sans-serif;
    font-weight: bold;
  }
  h6{
    color: #E6E6E9;
    font-family: Helvetica, sans-serif;
    font-weight: bold;
  }
  
  p{
    color: #DBE9EE;
    font-family: 'Montserrat', sans-serif;
    font-style: italic;
  }
  
  /* Divider */
  hr.rounded {
    border-top: 2px solid #E6E6E9;
    border-radius: 5px;
  }


/* Button position for Homepaage */

.wrapper {
    text-align: center;
    margin: 0 auto;
    margin-top: 100px;
}

.userdetails2 {
    background-color: white;
    border-radius: 10px;
    margin: auto;
    width: 600px;
    height: 600px;
}

.userdetails1 {
    background-color: white;
    border-radius: 10px;
    margin: auto;
    width: 600px;
    height: 400px;
}

.userdetailsinner {
    text-align: left;
    position: absolute;
    margin: 14px;
    margin-top: 18px;
}



* {
    font-family: Arial, Helvetica, sans-serif;
}

.formgroup {
    padding-top: 10px;
}

.signintitle {
    font-weight: 100;
    padding-top: 10px;
}

.registercontainer {
    background-color: white;
    text-align: left;
    margin: auto;
    width: 550px;
    height: 600px;
    margin-top: 100px;
}

.registercontainer1 {
    background-color: white;
    text-align: left;
    margin: auto;
    width: 550px;
    height: 400px;
    margin-top: 100px;
}

.navbar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;
}

li {
    float: left;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

li a:hover {
    background-color: #111;
}

.movieposter {
    background-color: white;
    height: 420px;
    width: 280px
}

.topmovies {
    margin: 20px 100px;
}

.topmovies div {
    height: 350px;
}

.movielist {
    overflow: hidden;
    margin: 10px;
    height: 260px;
    width: 180px;
    background-color: white;
    display: inline;
}

.moviename {
    text-align: center;
    margin: 10px;
    color: white;
}

.movieclicked {
    color: aliceblue;
}

.moviepos2 {
    height: 350px;
    width: 180px;
    display: inline-block;
    word-wrap: normal;
    overflow: hidden;
}

.moviepos {
    height: 350px;
    width: 180px;
    display: inline-block;
    word-wrap: normal;
    overflow: hidden;
}

.homemovieheader {
    color: rgb(255, 255, 255);
    font-weight: 200; 
    font-family: 'Lato', sans-serif;
}

.movielinkpost {
    width: 180px;
    height: 300px;
}

.allfilms {
    display: inline-block;
}

/* Scale up the box */
.box:hover {
    transform: scale(1.2, 1.2);
  }
  
  /* Fade in the pseudo-element with the bigger shadow */
  .box:hover::after {
    opacity: 1;
  }

